--- a/db/odbc.ini
+++ b/db/odbc.ini
@@ -17,13 +17,13 @@
 ;#######################################
 
 [ODBC Data Sources]
-TSKDB=IBM Data Server Driver included in ACE
+TSKDB2=IBM Data Server Driver included in ACE
 
 ;# IBM Data Server Driver included in ACE
 ;# Use of this driver requires additional configuration of DB2 config files 'db2cli.ini'
 ;# or 'db2dsdriver.cfg', and the setting of additional environment variables.
 ;# Refer to the Knowledge Center for details of the required configuration.
-[TSKDB]
+[TSKDB2]
 DRIVER=/opt/ibm/ace-11/server/ODBC/dsdriver/odbc_cli/clidriver/lib/libdb2o.so
 Description=IBM DB2 ODBC Database accessed using IBM Data Server Driver included in ACE
 Database=TSKDB
